--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -12,8 +12,12 @@
   <script src="lib/jasmine-2.4.1/boot.js"></script>
 
   <!-- include source files here... -->
-  <script src="dist/bundle.js"></script>
-
+  <script src="javascripts/weapons.js"></script>
+  <script src="javascripts/classes.js"></script>
+  <script src="javascripts/spells.js"></script>
+  <script src="javascripts/player.js"></script>
+  <script src="javascripts/enemies.js"></script>
+  <script src="javascripts/app.js"></script>
 
   <!-- include spec files here... -->
   <script src="spec/test.js"></script>
