created logic to ensure that classes were selected and saved

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       </div>
 
       <div class="container-fluid">
-        <div class="row">
+        <div class="row" id="profession-selector">
           <div class="col-sm-4">
             <div class="card__button">
               <a class="class__link btn btn--big btn--blue" href="#">
@@ -64,7 +64,7 @@
             <div class="card__button">
               <a class="class__link btn btn--big btn--blue" href="#">
                 <span class="btn__prompt">></span>
-                <span class="btn__text">berserker</span>
+                <span class="btn__text">Berserker</span>
               </a>
             </div>      
             
