--- a/index.html
+++ b/index.html
@@ -143,50 +143,6 @@
     <section id="weapon-select" class="card card--weapon">
       <div class="card__prompt">
         <div>choose your weapon</div>
-          <div class="row" id="weapon-selector">
-          <div class="card__button">
-              <a class="class__link btn btn--big btn--blue" href="#">
-                <span class="btn__prompt">></span>
-                <span class="btn__text">Dagger</span>
-              </a>
-            </div>
-          <div class="card__button">
-              <a class="class__link btn btn--big btn--blue" href="#">
-                <span class="btn__prompt">></span>
-                <span class="btn__text">Sword</span>
-              </a>
-            </div>
-          <div class="card__button">
-              <a class="class__link btn btn--big btn--blue" href="#">
-                <span class="btn__prompt">></span>
-                <span class="btn__text">Broad-Axe</span>
-              </a>
-            </div>    
-          <div class="card__button">
-              <a class="class__link btn btn--big btn--blue" href="#">
-                <span class="btn__prompt">></span>
-                <span class="btn__text">Chicken</span>
-              </a>
-            </div>
-          <div class="card__button">
-              <a class="class__link btn btn--big btn--blue" href="#">
-                <span class="btn__prompt">></span>
-                <span class="btn__text">Paper</span>
-              </a>
-          </div>
-          <div class="card__button">
-              <a class="class__link btn btn--big btn--blue" href="#">
-                <span class="btn__prompt">></span>
-                <span class="btn__text">Rock</span>
-              </a>
-          </div>
-            <div class="card__button">
-              <a class="class__link btn btn--big btn--blue" href="#">
-                <span class="btn__prompt">></span>
-                <span class="btn__text">Scissors</span>
-              </a>
-          </div>
-          </div>
         <div>
           <a class="card__back btn btn--small" 
              href="#"
@@ -196,6 +152,74 @@
           </a>          
         </div>
       </div>
+        
+          <div class="row" id="weapon-selector">
+            <div id="weapons">
+              <div class="card__button">
+                  <a class="class__link btn btn--big btn--blue" href="#">
+                    <span class="btn__prompt">></span>
+                    <span class="btn__text">Dagger</span>
+                  </a>
+                </div>
+              <div class="card__button">
+                  <a class="class__link btn btn--big btn--blue" href="#">
+                    <span class="btn__prompt">></span>
+                    <span class="btn__text">Sword</span>
+                  </a>
+                </div>
+              <div class="card__button">
+                  <a class="class__link btn btn--big btn--blue" href="#">
+                    <span class="btn__prompt">></span>
+                    <span class="btn__text">Broad-Axe</span>
+                  </a>
+                </div>    
+              <div class="card__button">
+                  <a class="class__link btn btn--big btn--blue" href="#">
+                    <span class="btn__prompt">></span>
+                    <span class="btn__text">Chicken</span>
+                  </a>
+                </div>
+              <div class="card__button">
+                  <a class="class__link btn btn--big btn--blue" href="#">
+                    <span class="btn__prompt">></span>
+                    <span class="btn__text">Paper</span>
+                  </a>
+              </div>
+              <div class="card__button">
+                  <a class="class__link btn btn--big btn--blue" href="#">
+                    <span class="btn__prompt">></span>
+                    <span class="btn__text">Rock</span>
+                  </a>
+              </div>
+              <div class="card__button">
+                <a class="class__link btn btn--big btn--blue" href="#">
+                  <span class="btn__prompt">></span>
+                  <span class="btn__text">Scissors</span>
+                </a>
+              </div>
+            </div> <!-- end of weapons -->
+
+            <div id="spells">
+              <div class="card__button">
+                <a class="class__link btn btn--big btn--blue" href="#">
+                  <span class="btn__prompt">></span>
+                  <span class="btn__text">Sphere</span>
+                </a>
+              </div>
+              <div class="card__button">
+                <a class="class__link btn btn--big btn--blue" href="#">
+                  <span class="btn__prompt">></span>
+                  <span class="btn__text">Bolt</span>
+                </a>
+              </div>
+              <div class="card__button">
+                <a class="class__link btn btn--big btn--blue" href="#">
+                  <span class="btn__prompt">></span>
+                  <span class="btn__text">Wand</span>
+                </a>
+              </div>
+            </div>
+          </div>
 
       <div class="card__button">
         <a class="card__link btn btn--big btn--orange" 
