--- a/index.html
+++ b/index.html
@@ -231,7 +231,15 @@
       </div>
     </section>
 
-    <section id="battleground" class="card card--battleground"></section>
+    <section id="battleground" class="card card--battleground">
+      <div class="row">
+        <div class="col-md-6" id="playerOutput">
+         
+          </div>
+          
+        <div class="col-md-6"></div>
+      </div>
+    </section>
 
   </article>
 
@@ -242,6 +250,7 @@
   <script src="javascripts/player.js"></script>
   <script src="javascripts/enemies.js"></script>
   <script src="javascripts/app.js"></script>
+  <script src="javascripts/fight.js"></script>
 
 </body>
 </html>
