--- a/index.html
+++ b/index.html
@@ -237,8 +237,12 @@
          
           </div>
           
-        <div class="col-md-6"></div>
+        <div class="col-md-6" id="enemyOutput"></div>
       </div>
+      <div class="row">
+        <button type="button" class="btn btn-danger" id="attackButton">MURDERIZE
+        </button>
+      </div>  
     </section>
 
   </article>
