Health bars update after each attack. Added attack display text

--- a/index.html
+++ b/index.html
@@ -240,8 +240,15 @@
         <div class="col-md-6" id="enemyOutput"></div>
       </div>
       <div class="row">
-        <button type="button" class="btn btn-danger" id="attackButton">MURDERIZE
-        </button>
+        <div class="col-md-6 col-md-offset-3 bordered">
+          <div id="fightText">Click the button below to fight!</div>
+        </div>
+      </div>
+      <div class="row">
+          <button type="button" class="btn btn-danger" id="attackButton">Attack!
+          </button>
+      </div>
+
       </div>  
     </section>
 
