added images to all character

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" type="text/css" href="styles/gauntlet.css">
 </head>
 
-<body>
+<body class="background">
 
   <article id="game-container">
 
@@ -98,6 +98,7 @@
               </a>
             </div>
           </div>
+
           <div class="col-sm-4">
             <div class="card__button">
               <a class="class__link btn btn--big btn--blue" href="#">
@@ -231,7 +232,7 @@
       </div>
     </section>
 
-    <section id="battleground" class="card card--battleground">
+    <section id="battleground" class="card card--battleground battleground">
       <div class="row">
         <div class="col-md-6" id="playerOutput">
          
