--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -18,6 +18,7 @@
   <script src="javascripts/player.js"></script>
   <script src="javascripts/enemies.js"></script>
   <script src="javascripts/app.js"></script>
+  <script src="javascripts/fight.js"></script>
 
   <!-- include spec files here... -->
   <script src="spec/test.js"></script>
