--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
               <div class="card__button">
                   <a class="class__link btn btn--big btn--blue" href="#">
                     <span class="btn__prompt">></span>
-                    <span class="btn__text">Broad-Axe</span>
+                    <span class="btn__text">Axe</span>
                   </a>
                 </div>    
               <div class="card__button">
