--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
             <div class="card__button">
               <a class="class__link btn btn--big btn--yellow" href="#">
                 <span class="btn__prompt">></span>
-                <span class="btn__text">surprise me</span>
+                <span class="btn__text">Surprise</span>
               </a>
             </div>
           </div>
@@ -245,8 +245,10 @@
           <div id="fightText">Click the button below to fight!</div>
         </div>
       </div>
-      <div class="row">
+      <div class="row" >
           <button type="button" class="btn btn-danger" id="attackButton">Attack!
+          </button>
+          <button type="button" class="btn btn-success hidden" id="playAgainButton">Play Again!
           </button>
       </div>
 
